--- a/app/views/create_ingreso.scala.html
+++ b/app/views/create_ingreso.scala.html
@@ -8,20 +8,56 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Introducir Ingreso</title>
+        <title>Introducir ingreso</title>
+
+            <!-- Esto es lo necesario para "ejecutar" boostrap" -->
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/bootstrap.min.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/bootstrap-grid.min.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/bootstrap-reboot.min.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/footer.css")">
+        <script src="@routes.Assets.versioned("javascripts/jquery-3.3.1.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("javascripts/bootstrap.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("javascripts/bootstrap.bundle.min.js")" type="text/javascript"></script>
+            <!-- Esto es lo necesario para "ejecutar" boostrap" -->
     </head>
     <body>
-        <div align="center">
-            @form(action = routes.IngresoController.createIngreso() ){
-                @CSRF.formField
-                @inputDate(ingresoForm("fecha"))
-                @inputText(ingresoForm("concepto"))
-                @inputText(ingresoForm("importe"))
-                @inputText(ingresoForm("emisor"))
-                @inputText(ingresoForm("observaciones"))
-                @select(ingresoForm("nombrePartida"), options = options(partidas))
-                @select(ingresoForm("nombreProyecto"), options = options(proyectos))
-                <button type="submit">Crear ingreso</button>
+        <div class="jumbotron">
+            <div class="row">
+                <div class="col-md-6">
+                @b4.vertical.form(action = routes.SessionController.login()) { implicit vfc =>
+                    @helper.CSRF.formField
+                <p class="col-sm-4" align="left"> @b4.submit('class -> "btn btn-primary"){ Volver atrás } </p>
+                }
+                </div>
+                <div class="col-md-6" align="right">
+                @b4.vertical.form(action = routes.SessionController.index()) { implicit vfc =>
+                    @helper.CSRF.formField
+                <p class="col-md-6"> @b4.submit('class -> "btn btn-secondary"){ Cerrar sesión } </p>
+                }
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                @b4.vertical.form(action = routes.IngresoController.createIngreso()) { implicit vfc =>
+                    @helper.CSRF.formField
+                    @b4.date(ingresoForm("fecha"), '_label -> "Fecha")
+                    @b4.text(ingresoForm("concepto"), '_label -> "Concepto")
+                    @b4.text(ingresoForm("importe"), '_label -> "Importe")
+                    @b4.text(ingresoForm("emisor"), '_label -> "Emisor")
+                }
+                </div>
+                <div class="col-md-6">
+                @b4.vertical.form(action = routes.IngresoController.createIngreso()) { implicit vfc =>
+                    @helper.CSRF.formField
+                    @b4.text(ingresoForm("observaciones"), '_label -> "Observaciones")
+                    @b4.text(ingresoForm("nombrePartida"), '_label -> "Partida")
+                    @b4.text(ingresoForm("nombreProyecto"), '_label -> "Proyecto")
+                }
+                </div>
+            </div>
+            @b4.vertical.form(action = routes.IngresoController.createIngreso()) { implicit vfc =>
+                @helper.CSRF.formField
+            <div align="center"> @b4.submit('class -> "btn btn-primary") { Añadir ingreso } </div>
             }
         </div>
     </body>
