--- a/app/views/index_sede.scala.html
+++ b/app/views/index_sede.scala.html
@@ -1,10 +1,13 @@
 @import helper._
+@import models.entities.Sede
+
+@(sedeList: List[Sede])
 
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Panel Agente</title>
+        <title>Sedes</title>
 
             <!-- Esto es lo necesario para "ejecutar" boostrap" -->
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/bootstrap.min.css")">
@@ -17,30 +20,37 @@
             <!-- Esto es lo necesario para "ejecutar" boostrap" -->
     </head>
     <body>
-        <div class="jumbotron">
-            <h1 align="center">Panel agente</h1>
-            <div align="center">
+        <header class="p-1 mb-6">
+            <div class="row">
+                @*<div class="col-md-6">
+                @b4.vertical.form(action = routes.SedeController.renderCreateSede()) { implicit vfc =>
+                    @helper.CSRF.formField
+                <p class="col-sm-4" align="left"> @b4.submit('class -> "btn btn-primary"){ Añadir sede } </p>
+                }
+                </div>*@
+                <div class="col-md-6" align="right">
                 @b4.vertical.form(action = routes.SessionController.index()) { implicit vfc =>
                     @helper.CSRF.formField
-                    <p class="col-md-6"> @b4.submit('class -> "btn btn-secondary"){ Cerrar sesión } </p>
+                <p class="col-md-6"> @b4.submit('class -> "btn btn-secondary"){ Cerrar sesión } </p>
                 }
+                </div>
             </div>
+        </header>
 
-            @*TODO Añadir rutas*@
-            <div class="row">
-                <div class="col-md-6" align="center">
-                    @b4.vertical.form(action = routes.AlumnoController.listAlumnos()) { implicit vfc =>
-                        @helper.CSRF.formField
-                        @b4.submit('class -> "btn btn-primary") { Alumnos }
-                    }
-                </div>
-                <div class="col-md-6" align="center">
-                    @b4.vertical.form(action = routes.SocioController.listSocios()) { implicit vfc =>
-                        @helper.CSRF.formField
-                        @b4.submit('class -> "btn btn-primary") { Socios }
-                    }
-                </div>
-            </div>
-        </div>
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th>Nombre</th>
+                    <th>Región</th>
+                </tr>
+            </thead>
+            @for(sede <- sedeList) {
+                @*<tr>
+                    <td>@sede.getNombre</td>
+                    <td>@sede.getRegion</td>
+                    <td><button class="btn-secondary" type="submit">Editar</button></td>
+                </tr>*@
+            }
+        </table>
     </body>
 </html>
