--- a/app/views/create_tipoProyecto.scala.html
+++ b/app/views/create_tipoProyecto.scala.html
@@ -7,14 +7,45 @@
     <head>
         <meta charset="UTF-8">
         <title>Introducir tipo de proyecto</title>
+
+            <!-- Esto es lo necesario para "ejecutar" boostrap" -->
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/bootstrap.min.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/bootstrap-grid.min.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/bootstrap-reboot.min.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/footer.css")">
+        <script src="@routes.Assets.versioned("javascripts/jquery-3.3.1.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("javascripts/bootstrap.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("javascripts/bootstrap.bundle.min.js")" type="text/javascript"></script>
+            <!-- Esto es lo necesario para "ejecutar" boostrap" -->
     </head>
     <body>
-        <div align="center">
-            @form(action = routes.TipoProyectoController.createTipoProyecto() ){
-                @CSRF.formField
-                @inputText(tipoForm("nombre"))
-                @inputText(tipoForm("descripcion"))
-                <button type="submit">Crear tipo de proyecto</button>
+        <div class="jumbotron">
+            <div class="row">
+                <div class="col-md-6">
+                @b4.vertical.form(action = routes.SessionController.login()) { implicit vfc =>
+                    @helper.CSRF.formField
+                <p class="col-sm-4" align="left"> @b4.submit('class -> "btn btn-primary"){ Volver atrás } </p>
+                }
+                </div>
+                <div class="col-md-6" align="right">
+                @b4.vertical.form(action = routes.SessionController.index()) { implicit vfc =>
+                    @helper.CSRF.formField
+                <p class="col-md-6"> @b4.submit('class -> "btn btn-secondary"){ Cerrar sesión } </p>
+                }
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                @b4.vertical.form(action = routes.TipoProyectoController.createTipoProyecto()) { implicit vfc =>
+                    @helper.CSRF.formField
+                    @b4.text(tipoForm("nombre"), '_label -> "Nombre")
+                    @b4.text(tipoForm("descripcion"), '_label -> "Descripción")
+                }
+                </div>
+            </div>
+            @b4.vertical.form(action = routes.TipoProyectoController.createTipoProyecto()) { implicit vfc =>
+                @helper.CSRF.formField
+            <div align="center"> @b4.submit('class -> "btn btn-primary") { Añadir tipo de proyecto } </div>
             }
         </div>
     </body>
