--- a/app/views/create_usuario.scala.html
+++ b/app/views/create_usuario.scala.html
@@ -1,24 +1,68 @@
-@import models.entities.Usuario
 @import helper._
+@import models.entities.Usuario
+@import b4.horizontal.fieldConstructor
 @import java.util
+
 @(userForm: Form[Usuario], roles: util.List[String])
 
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Introducir Usuario</title>
+        <title>Introducir usuario</title>
+
+            <!-- Esto es lo necesario para "ejecutar" boostrap" -->
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/bootstrap.min.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/bootstrap-grid.min.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/bootstrap-reboot.min.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/footer.css")">
+        <script src="@routes.Assets.versioned("javascripts/jquery-3.3.1.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("javascripts/bootstrap.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("javascripts/bootstrap.bundle.min.js")" type="text/javascript"></script>
+            <!-- Esto es lo necesario para "ejecutar" boostrap" -->
     </head>
     <body>
-        <div align="center">
-            @form(action = routes.UserController.createUser() ){
-                @CSRF.formField
-                @inputText(userForm("nombre"))
-                @inputText(userForm("email"))
-                @select(userForm("rol"), options = options(roles))
-                @inputText(userForm("contrasena"))
-                <button type="submit">Crear usuario</button>
+        <div class="jumbotron">
+            <div class="row">
+                <div class="col-md-6">
+                @b4.vertical.form(action = routes.SessionController.login()) { implicit vfc =>
+                    @helper.CSRF.formField
+                    <p class="col-sm-4" align="left"> @b4.submit('class -> "btn btn-primary"){ Volver atrás } </p>
+                }
+                </div>
+                <div class="col-md-6" align="right">
+                @b4.vertical.form(action = routes.SessionController.index()) { implicit vfc =>
+                    @helper.CSRF.formField
+                    <p class="col-md-6"> @b4.submit('class -> "btn btn-secondary"){ Cerrar sesión } </p>
+                }
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                @b4.vertical.form(action = routes.UserController.createUser()) { implicit vfc =>
+                    @helper.CSRF.formField
+                    @b4.text(userForm("nombre"), '_label -> "Nombre")
+                    @b4.select(userForm("rol"), '_label -> "Rol") { implicit values => <optgroup>
+                        @b4.selectOption("opt_1-1", "Agente")
+                        @b4.selectOption("opt_1-2", "Responsable económino")
+                        @b4.selectOption("opt_1-2", "Responsable regional")
+                    </optgroup>
+                    }
+                }
+                </div>
+                <div class="col-md-6">
+                @b4.vertical.form(action = routes.UserController.createUser()) { implicit vfc =>
+                    @helper.CSRF.formField
+                    @b4.text(userForm("email"), '_label -> "Email")
+                    @b4.text(userForm("contrasena"), '_label -> "Contraseña")
+                }
+                </div>
+            </div>
+            @b4.vertical.form(action = routes.UserController.createUser()) { implicit vfc =>
+                @helper.CSRF.formField
+                <div align="center"> @b4.submit('class -> "btn btn-primary") { Añadir usuario } </div>
             }
         </div>
     </body>
 </html>
+
