--- a/app/views/edit_partida.scala.html
+++ b/app/views/edit_partida.scala.html
@@ -13,23 +13,48 @@ El boton guardar modifica los datos del usuario y devuelve la vista de lista de 
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Modificar partida</title>
+        <title>Editar partida</title>
+
+            <!-- Esto es lo necesario para "ejecutar" boostrap" -->
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/bootstrap.min.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/bootstrap-grid.min.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/bootstrap-reboot.min.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/footer.css")">
+        <script src="@routes.Assets.versioned("javascripts/jquery-3.3.1.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("javascripts/bootstrap.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("javascripts/bootstrap.bundle.min.js")" type="text/javascript"></script>
+            <!-- Esto es lo necesario para "ejecutar" boostrap" -->
     </head>
     <body>
-        @* Global errors are not tied to any particular form field *@
-        @if(partidaForm.hasGlobalErrors) {
-            @for( error <- partidaForm.globalErrors) {
-                <div>
-                    @error.toString
+        <div class="jumbotron">
+            <div class="row">
+                <div class="col-md-6">
+                @b4.vertical.form(action = routes.SessionController.login()) { implicit vfc =>
+                    @helper.CSRF.formField
+                <p class="col-sm-4" align="left"> @b4.submit('class -> "btn btn-primary"){ Volver atrás } </p>
+                }
                 </div>
+                <div class="col-md-6" align="right">
+                @b4.vertical.form(action = routes.SessionController.index()) { implicit vfc =>
+                    @helper.CSRF.formField
+                <p class="col-md-6"> @b4.submit('class -> "btn btn-secondary"){ Cerrar sesión } </p>
+                }
+                </div>
+            </div>
+            @* Global errors are not tied to any particular form field *@
+            @if(partidaForm.hasGlobalErrors) {
+                @for( error <- partidaForm.globalErrors) {
+                    <div>
+                    @error.toString
+                    </div>
+                }
             }
-        }
-        <div align="center">
-            @form(action = routes.PartidaController.editPartida(partidaId)) {
-                @CSRF.formField
-                @inputText(partidaForm("nombre"))
-                <button type="submit">Editar partida</button>
+            <div align="center">
+            @b4.vertical.form(action = routes.PartidaController.editPartida(partidaId)) { implicit vfc =>
+                @helper.CSRF.formField @b4.text(partidaForm("nombre"), '_label -> "Nombre")
+            <div align="center"> @b4.submit('class -> "btn btn-primary") { Editar partida } </div>
             }
-    </div>
+            </div>
+        </div>
     </body>
 </html>
