--- a/app/views/edit_tipoProyecto.scala.html
+++ b/app/views/edit_tipoProyecto.scala.html
@@ -13,24 +13,48 @@ El boton guardar modifica los datos del usuario y devuelve la vista de lista de 
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Modificar tipo de proyecto</title>
+        <title>Editar tipo de proyecto</title>
+
+            <!-- Esto es lo necesario para "ejecutar" boostrap" -->
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/bootstrap.min.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/bootstrap-grid.min.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/bootstrap-reboot.min.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/footer.css")">
+        <script src="@routes.Assets.versioned("javascripts/jquery-3.3.1.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("javascripts/bootstrap.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("javascripts/bootstrap.bundle.min.js")" type="text/javascript"></script>
+            <!-- Esto es lo necesario para "ejecutar" boostrap" -->
     </head>
+
     <body>
-        @* Global errors are not tied to any particular form field *@
-        @if(tipoForm.hasGlobalErrors) {
-            @for( error <- tipoForm.globalErrors) {
-                <div>
-                    @error.toString
+        <div class="jumbotron">
+            <div class="row">
+                <div class="col-md-6">
+                @b4.vertical.form(action = routes.SessionController.login()) { implicit vfc =>
+                    @helper.CSRF.formField
+                <p class="col-sm-4" align="left"> @b4.submit('class -> "btn btn-primary"){ Volver atrás } </p>
+                }
                 </div>
+                <div class="col-md-6" align="right">
+                @b4.vertical.form(action = routes.SessionController.index()) { implicit vfc =>
+                    @helper.CSRF.formField
+                <p class="col-md-6"> @b4.submit('class -> "btn btn-secondary"){ Cerrar sesión } </p>
+                }
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                @b4.vertical.form(action = routes.TipoProyectoController.editTipoProyecto(tipoId)) { implicit vfc =>
+                    @helper.CSRF.formField
+                    @b4.text(tipoForm("nombre"), '_label -> "Nombre")
+                    @b4.text(tipoForm("descripcion"), '_label -> "Descripción")
+                }
+                </div>
+            </div>
+            @b4.vertical.form(action = routes.TipoProyectoController.editTipoProyecto(tipoId)) { implicit vfc =>
+                @helper.CSRF.formField
+            <div align="center"> @b4.submit('class -> "btn btn-primary") { Editar tipo de proyecto } </div>
             }
-        }
-        <div align="center">
-            @form(action = routes.TipoProyectoController.editTipoProyecto(tipoId)) {
-                @CSRF.formField
-                @inputText(tipoForm("nombre"))
-                @inputText(tipoForm("descripcion"))
-                <button type="submit">Editar tipo de proyecto</button>
-            }
-    </div>
+        </div>
     </body>
 </html>
