--- a/app/views/index_alumnos.scala.html
+++ b/app/views/index_alumnos.scala.html
@@ -1,55 +1,90 @@
 @import helper._
 @import models.entities.Alumno
+@import b4.horizontal.fieldConstructor
 
 @(alumnoList: List[Alumno])
 
-<h1>Alumnos</h1>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>Alumnos</title>
 
-<table border="1">
-    <tr>
-        <th>Codigo</th>
-        <th>Nombre</th>
-        <th>Apellidos</th>
-        <th>Estado</th>
-        <th>Sexo</th>
-        <th>Fecha Nacimiento</th>
-        <th>Fecha Entrada ACOES</th>
-        <th>Fecha Alta</th>
-        <th>Fecha Salida ACOES</th>
-        <th>Grado Curso</th>
-        <th>Colonia de procedencia</th>
-        <th>Colonia actual</th>
-        <th>Observaciones</th>
-        <th>Editar</th>
-    </tr>
-    @for(alumno <- alumnoList) {
-        <tr>
-            <td>@alumno.getCodigo</td>
-            <td>@alumno.getNombre</td>
-            <td>@alumno.getApellidos</td>
-            <td>@alumno.getEstado</td>
-            <td>@alumno.getSexo</td>
-            <td>@alumno.getFechaNacimiento</td>
-            <td>@alumno.getFechaEntradaAcoes</td>
-            <td>@alumno.getFechaAlta</td>
-            <td>@alumno.getFechaSalidaAcoes</td>
-            <td>@alumno.getGradoCurso</td>
-            <td>@alumno.getColoniaProcedencia</td>
-            <td>@alumno.getColoniaActual</td>
-            <td>@alumno.getObservaciones</td>
-            <td>@alumno.isApadrinable</td>
-            <td>Editar</td>
-            <td>
-            @form(action = routes.AlumnoController.renderEditAlumno(alumno.getCodigo)) {
-                @helper.CSRF.formField
-                <input type="hidden" name="alumnoId" value="@alumno.getCodigo" />
-                <button type="submit">Editar alumno"</button>
-            }
-            </td>
-        </tr>
-    }
-    @form(action = routes.AlumnoController.renderCreateAlumno()) {
-        @helper.CSRF.formField
-        <button type="submit">Añadir alumno</button>
-    }
-</table>
+            <!-- Esto es lo necesario para "ejecutar" boostrap" -->
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/bootstrap.min.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/bootstrap-grid.min.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/bootstrap-reboot.min.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/footer.css")">
+        <script src="@routes.Assets.versioned("javascripts/jquery-3.3.1.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("javascripts/bootstrap.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("javascripts/bootstrap.bundle.min.js")" type="text/javascript"></script>
+            <!-- Esto es lo necesario para "ejecutar" boostrap" -->
+    </head>
+
+    <body>
+        <header class="p-1 mb-6">
+            <div class="row">
+                <div class="col-md-6">
+                    @helper.CSRF.formField
+                    @b4.vertical.form(action = routes.AlumnoController.createAlumno()) { implicit vfc =>
+                        @helper.CSRF.formField
+                        <p class="col-sm-4" align="left"> @b4.submit('class -> "btn btn-primary"){ Añadir alumno } </p>
+                    }
+                </div>
+                <div class="col-md-6" align="right">
+                    @helper.CSRF.formField
+                    @b4.vertical.form(action = routes.SessionController.index()) { implicit vfc =>
+                        @helper.CSRF.formField
+                        <p class="col-md-6"> @b4.submit('class -> "btn btn-secondary"){ Cerrar sesión } </p>
+                    }
+                </div>
+            </div>
+
+        <div align="center">
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th>Codigo</th>
+                        <th>Nombre</th>
+                        <th>Apellidos</th>
+                        <th>Estado</th>
+                        <th>Sexo</th>
+                        <th>Fecha Nacimiento</th> @* Codigo Beneficiario *@
+                        <th>Fecha Entrada ACOES</th>
+                        <th>Fecha Alta</th>
+                        <th>Fecha Salida ACOES</th>
+                        <th>Grado Curso</th>
+                        <th>Colonia de procedencia</th>
+                        <th>Colonia actual</th>
+                        <th>Observaciones</th>
+                    </tr>
+                </thead>
+
+                @for(alumno <- alumnoList) {
+                    <tr>
+                        <td>@alumno.getCodigo</td>
+                        <td>@alumno.getNombre</td>
+                        <td>@alumno.getApellidos</td>
+                        <td>@alumno.getEstado</td>
+                        <td>@alumno.getSexo</td>
+                        <td>@alumno.getFechaNacimiento</td>
+                        <td>@alumno.getFechaEntradaAcoes</td>
+                        <td>@alumno.getFechaAlta</td>
+                        <td>@alumno.getFechaSalidaAcoes</td>
+                        <td>@alumno.getGradoCurso</td>
+                        <td>@alumno.getColoniaProcedencia</td>
+                        <td>@alumno.getColoniaActual</td>
+                        <td>@alumno.getObservaciones</td>
+                        <td>
+                        @form(action = routes.AlumnoController.renderEditAlumno(alumno.getCodigo)) {
+                            @helper.CSRF.formField
+                            <input type="hidden" name="userId" value="alumnoId" />
+                            <button class="btn-secondary" type="submit">Editar</button>
+                        }
+                        </td>
+                    </tr>
+                }
+            </table>
+        </div>
+    </body>
+</html>
