--- a/app/views/index_egresos.scala.html
+++ b/app/views/index_egresos.scala.html
@@ -3,47 +3,76 @@
 
 @(egresoList: List[Egreso])
 
-<h1>Egresos</h1>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>Egresos</title>
 
-<table border="1">
-    <tr>
-        <th>Id</th>
-        <th>Fecha</th>
-        <th>Concepto</th>
-        <th>Importe</th>
-        <th>Alumno</th>
-        <th>Colaborador</th>
-        <th>Tercero</th>
-        <th>Socio</th>
-        <th>tipo de Beneficiario</th>
-        <th>Observaciones</th>
-        <th>Partida</th>
-        <th>Proyecto</th>
-        <th>Creador</th>
-        <th>Validado</th>
-        <th>Responsable</th>
-    </tr>
-    @for(egreso <- egresoList) {
-        <tr>
-            <td>@egreso.getId</td>
-            <td>@egreso.getFecha</td>
-            <td>@egreso.getConcepto</td>
-            <td>@egreso.getImporte</td>
-            <td>@egreso.getBeneficiarioAlumno.getNombre @egreso.getBeneficiarioAlumno.getApellidos</td>
-            <td>@egreso.getBeneficiarioColaborador.getNombre</td>
-            <td>@egreso.getBeneficiarioTercero.getNombre</td>
-            <td>@egreso.getBeneficiarioSocio.getNombre @egreso.getBeneficiarioSocio.getApellidos</td>
-            <td>@egreso.getTipoBeneficiario</td>
-            <td>@egreso.getObservaciones</td>
-            <td>@egreso.getPartida</td>
-            <td>@egreso.getProyecto.getNombre</td>
-            <td>@egreso.getCreador.getNombre</td>
-            <td>@egreso.isValidado</td>
-            <td>@egreso.getResponsable.getNombre</td>
-        </tr>
-    }
-    @form(action = routes.EgresoController.renderCreateEgreso()) {
-        @helper.CSRF.formField
-        <button type="submit">Añadir egreso</button>
-    }
-</table>
+            <!-- Esto es lo necesario para "ejecutar" boostrap" -->
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/bootstrap.min.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/bootstrap-grid.min.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/bootstrap-reboot.min.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/footer.css")">
+        <script src="@routes.Assets.versioned("javascripts/jquery-3.3.1.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("javascripts/bootstrap.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("javascripts/bootstrap.bundle.min.js")" type="text/javascript"></script>
+            <!-- Esto es lo necesario para "ejecutar" boostrap" -->
+    </head>
+
+    <body>
+        <header class="p-1 mb-6">
+            <div class="row">
+                <div class="col-md-6">
+                @b4.vertical.form(action = routes.EgresoController.renderCreateEgreso()) { implicit vfc =>
+                    @helper.CSRF.formField
+                <p class="col-sm-4" align="left"> @b4.submit('class -> "btn btn-primary"){ Añadir egreso } </p>
+                }
+                </div>
+                <div class="col-md-6" align="right">
+                @b4.vertical.form(action = routes.SessionController.index()) { implicit vfc =>
+                    @helper.CSRF.formField
+                <p class="col-md-6"> @b4.submit('class -> "btn btn-secondary"){ Cerrar sesión } </p>
+                }
+                </div>
+            </div>
+        <table class="table table-striped">
+            <tr>
+                <th>Id</th>
+                <th>Fecha</th>
+                <th>Concepto</th>
+                <th>Importe</th>
+                <th>Alumno</th>
+                <th>Colaborador</th>
+                <th>Tercero</th>
+                <th>Socio</th>
+                <th>Tipo de Beneficiario</th>
+                <th>Observaciones</th>
+                <th>Partida</th>
+                <th>Proyecto</th>
+                <th>Creador</th>
+                <th>Válido</th>
+                <th>Responsable</th>
+            </tr>
+            @for(egreso <- egresoList) {
+                <tr>
+                    <td>@egreso.getId</td>
+                    <td>@egreso.getFecha</td>
+                    <td>@egreso.getConcepto</td>
+                    <td>@egreso.getImporte</td>
+                    <td>@egreso.getBeneficiarioAlumno</td>
+                    <td>@egreso.getBeneficiarioColaborador</td>
+                    <td>@egreso.getBeneficiarioTercero</td>
+                    <td>@egreso.getBeneficiarioSocio</td>
+                    <td>@egreso.getTipoBeneficiario</td>
+                    <td>@egreso.getObservaciones</td>
+                    <td>@egreso.getPartida</td>
+                    <td>@egreso.getProyecto</td>
+                    <td>@egreso.getCreador</td>
+                    <td>@egreso.isValidado</td>
+                    <td>@egreso.getResponsable</td>
+                </tr>
+            </table>
+            }
+    </body>
+
