--- a/app/views/index_tiposProyecto.scala.html
+++ b/app/views/index_tiposProyecto.scala.html
@@ -3,30 +3,54 @@
 
 @(tipoList: List[TipoProyecto])
 
-<h1>Lista de tipos de proyectos</h1>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>Tipos de proyecto</title>
 
-<table border="1">
-    <tr>
-        <th>ID</th>
-        <th>Nombre</th>
-        <th>Descripcion</th>
-    </tr>
-    @for(tipo <- tipoList) {
-        <tr>
-            <td>@tipo.getId</td>
-            <td>@tipo.getNombre</td>
-            <td>@tipo.getDescripcion</td>
-            <td>
-            @form(action = routes.TipoProyectoController.renderEditTipoProyecto(tipo.getId)) {
-                @helper.CSRF.formField
-                <input type="hidden" name="tipoId" value="@tipo.getId" />
-                <button type="submit">Editar tipo de proyecto"</button>
+            <!-- Esto es lo necesario para "ejecutar" boostrap" -->
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/bootstrap.min.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/bootstrap-grid.min.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/bootstrap-reboot.min.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/footer.css")">
+        <script src="@routes.Assets.versioned("javascripts/jquery-3.3.1.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("javascripts/bootstrap.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("javascripts/bootstrap.bundle.min.js")" type="text/javascript"></script>
+            <!-- Esto es lo necesario para "ejecutar" boostrap" -->
+    </head>
+    <body>
+        <header class="p-1 mb-6">
+            <div class="row">
+                <div class="col-md-6">
+                @b4.vertical.form(action = routes.TipoProyectoController.renderCreateTipoProyecto()) { implicit vfc =>
+                    @helper.CSRF.formField
+                <p class="col-sm-4" align="left"> @b4.submit('class -> "btn btn-primary"){ Añadir tipo de proyecto } </p>
+                }
+                </div>
+                <div class="col-md-6" align="right">
+                @b4.vertical.form(action = routes.SessionController.index()) { implicit vfc =>
+                    @helper.CSRF.formField
+                <p class="col-md-6"> @b4.submit('class -> "btn btn-secondary"){ Cerrar sesión } </p>
+                }
+                </div>
+            </div>
+        </header>
+
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th>Nombre</th>
+                    <th>Descripción</th>
+                </tr>
+            </thead>
+            @for(tipo <- tipoList) {
+                <tr>
+                    <td>@tipo.getNombre</td>
+                    <td>@tipo.getDescripcion</td>
+                    <td><button class="btn-secondary" type="submit">Editar</button></td>
+                </tr>
             }
-            </td>
-        </tr>
-    }
-    @form(action = routes.TipoProyectoController.renderCreateTipoProyecto()) {
-        @helper.CSRF.formField
-        <button type="submit">Añadir tipo de proyecto</button>
-    }
-</table>
+        </table>
+    </body>
+</html>
